@@ -145,14 +145,20 @@ $string['defaultplayertypestudent']='Transcript display(student)';
 $string['defaultplayertypedetails']='Use the interactive or static transcript player if you are transcribing or show no transcript';
 $string['transcripttitle']='Transcript';
 
+//these errors are displayed on settings page
 $string['displaysubs'] = '{$a->subscriptionname} : expires {$a->expiredate}';
-$string['noapiuser'] = "No API user entered. Read Aloud will not work correctly.";
-$string['noapisecret'] = "No API secret entered. Read Aloud will not work correctly.";
+$string['noapiuser'] = "No API user entered. This plugin will not work correctly.";
+$string['noapisecret'] = "No API secret entered. This plugin will not work correctly.";
 $string['credentialsinvalid'] = "The API user and secret entered could not be used to get access. Please check them.";
 $string['appauthorised']= "Assign Submission Cloud Poodll is authorised for this site.";
 $string['appnotauthorised']= "Assign Submission Cloud Poodll  is NOT authorised for this site.";
 $string['refreshtoken']= "Refresh license information";
 $string['notokenincache']= "Refresh to see license information. Contact Poodll support if there is a problem.";
+
+//these errors are displayed on activity page
+$string['nocredentials'] = 'API user and secret not entered. Please enter them on <a href="{$a}">the settings page.</a> You can get them from <a href="https://poodll.com/member">Poodll.com.</a>';
+$string['novalidcredentials'] = 'API user and secret were rejected and could not gain access. Please check them on <a href="{$a}">the settings page.</a> You can get them from <a href="https://poodll.com/member">Poodll.com.</a>';
+$string['nosubscriptions'] = "There is no current subscription for this site/plugin.";
 
 $string['clicktohide']= "Hide current submission";
 $string['clicktoshow']= "Show current submission";
@@ -160,4 +166,8 @@ $string['clicktoshow']= "Show current submission";
 $string['transcribernone']= "No transcription";
 $string['transcriberamazon']= "Normal transcription";
 $string['transcribergooglecloud']= "Fast transcription(audio only)";
+
+$string['recorderdisplayname']= "Recorder";
+$string['customname']= "Custom name";
+$string['customnamedetails']= "Set a custom name for the submission field(ie not 'Recorder') as displayed inside the plugin";
 
