@@ -130,3 +130,9 @@ $settings->add(new admin_setting_configselect(constants::M_COMPONENT .'/language
 	$settings->add(new admin_setting_configselect(constants::M_COMPONENT .'/displaysize_list',
 						new lang_string('displaysizelist', constants::M_COMPONENT),
 						new lang_string('displaysizelistdetails', constants::M_COMPONENT), '0', $size_options));
+
+    //allow user to set a custom name for the plugin as displayed to users
+    $settings->add(new admin_setting_configtext(constants::M_COMPONENT . '/customname',
+            new lang_string('customname', constants::M_COMPONENT),
+            new lang_string('customnamedetails', constants::M_COMPONENT),
+            '', PARAM_TEXT));
