@@ -1,5 +1,10 @@
 Change List
 =========
+Version XXX
+-added better reporting of poor Cloud Poodll config settings
+-made recorder title customizable
+-corrected strings referringto ReadAloud
+
 Version 1.0.13 (Build 2019091300)
 -Fixed issue where incorrect privacy function declaration broke plugin privacy registry on load
 
